# SpotiFLAC-CLI

./: .gitignore  BUILD.md  FIX_SUMMARY.md  README.md  SUMMARY.md  SpotiFLAC.py  VERIFICATION.md  build_linux.sh  getMetadata.py  launcher.py  pyproject.toml
.github/workflows/: build-release.yml
SpotiFLAC/: SpotiFLAC.py  amazonDL.py  deezerDL.py  getMetadata.py  qobuzDL.py  tidalDL.py
SpotiFLAC.egg-info/: PKG-INFO
spotiflac/: SpotiFLAC.py  __init__.py
