[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SpotiFLAC"
version = "0.1.1"
description = "Downloader module wrapper for SpotiFLAC"
authors = [
  { name="ShuKurenais", email="shukurenais@proton.me" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "requests~=2.32.3",
  "mutagen~=1.47.0",
  "pyotp~=2.9.0"
]

[project.urls]
"Repository" = "https://github.com/ShuShuzinhuu/SpotiFLAC-Module-Version"
